--- a/main.css
+++ b/main.css
@@ -1,12 +1,21 @@
 html,
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
     height: 100%;
+}
+
+#page-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 200px;
+}
+
+a {
+    text-decoration: none;
+    color: rgba(0,0,0,0.87);
 }
 
 #nav-container {
@@ -14,11 +23,16 @@ body {
     left: 0;
     top: 0;
     width: 100%;
+    height: 65px;
 }
 
 #nav-elements {
     display: flex;
     justify-content: flex-end;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: auto;
+    background-color: aqua;
 }
 
 #icon-img {
