--- a/main.css
+++ b/main.css
@@ -4,6 +4,9 @@ body {
     -moz-appearance: none;
     appearance: none;
     height: 100%;
+    font-family: Arial, sans-serif;
+    color: #222;
+    background-color: #fff;
 }
 
 #page-container {
@@ -24,15 +27,44 @@ a {
     top: 0;
     width: 100%;
     height: 65px;
-}
-
-#nav-elements {
     display: flex;
     justify-content: flex-end;
     flex-grow: 0;
     flex-shrink: 0;
     flex-basis: auto;
-    background-color: aqua;
+}
+
+#nav-elements-container {
+    margin-top: 15px;
+    width: 260px;
+}
+
+#nav-elements {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-right: 10px;
+}
+
+.header-text {
+    font-size: 14px;
+    color: rgba(0,0,0,0.87);
+}
+
+#enter-btn-container {
+    display: inline-block;
+    border: 1px solid #4285f4;
+    font-weight: bold;
+    outline: none;
+    background: -webkit-linear-gradient(top,#4387fd,#4683ea);
+    line-height: 28px;
+    padding: 0 12px;
+}
+
+#enter-btn {
+    color: #fff;
+    font-size: 13px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #icon-img {
@@ -61,8 +93,8 @@ a {
 
 footer {
     position: fixed;
-    left: 0;
     bottom: 0;
+    left: 0;
     width: 100%;   
 }
 
