--- a/main.css
+++ b/main.css
@@ -7,6 +7,7 @@ body {
     font-family: Arial, sans-serif;
     color: #222;
     background-color: #fff;
+    overflow: hidden;
 }
 
 #page-container {
@@ -44,10 +45,11 @@ a {
     justify-content: space-around;
     align-items: center;
     margin-right: 10px;
+    font-family: Arial, sans-serif;
 }
 
 .header-text {
-    font-size: 14px;
+    font-size: 13px;
     color: rgba(0,0,0,0.87);
 }
 
@@ -79,7 +81,7 @@ a {
 #form-elements-container {
     width: 482px;
     height: 44px;
-    margin: 0 auto;
+    margin: 25px auto;
     border: 1px solid #dfe1e5;
     border-radius: 24px;
 }
@@ -132,10 +134,51 @@ a {
     padding: 0 8px 0 8px;
 }
 
+.btn {
+    background-image: -webkit-linear-gradient(top,#f5f5f5,#f1f1f1);
+    background-color: #f2f2f2;
+    border: 1px solid #f2f2f2;
+    border-radius: 4px;
+    cursor: pointer;
+    user-select: none;
+    font-size: 14px;
+    color: #5F6368;
+    margin: 11px 4px;
+    padding: 0 16px;
+    line-height: 27px;
+    height: 36px;
+    min-width: 54px;
+    text-align: center;
+}
+
 footer {
     position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;   
+}
+
+.footer-container {
+    white-space: nowrap;
+    font-size: 14px;
+    line-height: 40px;
+    color: rgba(0, 0, 0, 0.54);
+    background-color:rgb(242, 242, 242);
+    border-top:1px solid rgb(228, 228, 228);
+    font-family: Arial, sans-serif;
+}
+
+#footer-country {
+    margin-left: 30px;
+}
+
+#footer-container-right {
+    float: right;
+    margin-right: 30px;
+}
+
+.footer-item {
+    margin-left: 30px;
+    color: #5F6368;
 }
 
